--- a/css/stylerules.css
+++ b/css/stylerules.css
@@ -1,14 +1,25 @@
+body {
+    background-color: #222222;
+}
+
 svg {
     border: 1px solid #333333;
+}
+
+path.line { 
+    stroke: #0191c7;
+    fill: #0191c7;
+    fill-opacity: 0.0;
 }
 
 .axis path,
 .axis line {
     fill: none;
-    stroke: black;
+    stroke: white;
 }
 
 .axis text {
     font-size: 10px; 
     font-family: sans-serif;
+    stroke: white;
 }
