--- a/css/stylerules.css
+++ b/css/stylerules.css
@@ -1,24 +1,28 @@
-body {
-    background-color: #222222;
+#content {
+    background-color: #222222 !important;
+}
+
+.n2_content_text {
+    display: none;
 }
 
 svg {
     border: 1px solid #333333;
 }
 
-path.line { 
+svg path.line { 
     stroke: #0191c7;
     fill: #0191c7;
     fill-opacity: 0.0;
 }
 
-.axis path,
-.axis line {
+svg .axis path,
+svg .axis line {
     fill: none;
     stroke: white;
 }
 
-.axis text {
+svg .axis text {
     font-size: 10px; 
     font-family: sans-serif;
     stroke: white;
