--- a/css/stylerules.css
+++ b/css/stylerules.css
@@ -28,3 +28,9 @@ svg .axis text {
     font-family: sans-serif;
     stroke: white;
 }
+
+svg .axis text.axis_label {
+    font-size: 14px;
+    fill: white;
+    text-anchor: middle;
+}
