--- a/css/stylerules.css
+++ b/css/stylerules.css
@@ -17,6 +17,12 @@ svg path.line {
     fill-opacity: 0.0;
 }
 
+svg path.area {
+    fill: #0191c7;
+    fill-opacity: 0.5;
+    stroke-width: 0;
+}
+
 svg .axis path,
 svg .axis line {
     fill: none;
