--- a/css/stylerules.css
+++ b/css/stylerules.css
@@ -59,9 +59,24 @@ svg .axis text.axis_label {
     margin-top: 15px;
     margin-bottom: 10px;
 }
+.ui-slider-range.ui-widget-header {
+    background-color: #0191c7;
+}
 #date_min, 
 #date_max {
-    margin: 5px;
+    margin: 20px 10px 0px 10px;
+    border-bottom: 1px dashed #999;
+    
+}
+#date_min input,
+#date_max input {
+    background-color: rgba(0,0,0,0);
+    color: white;
+    border: none;
+    line-height: normal;
+    max-width: 190px;
+    float: right;
+    margin-right: 15px;
 }
 #control_panel_heading {
     color: #ffffff;
@@ -73,6 +88,7 @@ svg .axis text.axis_label {
 }
 .range_label {
     color: #ffffff;
+    margin-left: 5px;
 }
 
 /* Nav-bar control styling */
